--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,10 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
+.container-fluid{
+  padding-left: 0px;
+  padding-right: 0px;
+  font-family: 'Open Sans', Arial, sans-serif;
+ }
